--- a/subscribe.html
+++ b/subscribe.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
-    <link rel="stylesheet" href="assets/styles.css">
-    <title>Subscribe</title>
-  </head>
-  
-  <body>
-    <header>
-      <div class="container-fluid">
-        <h2>Tom Waits Unofficial Fansite</h2><br>
-      </div>
-    </header>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+    integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+  <link rel="stylesheet" href="assets/styles.css">
+  <title>Subscribe</title>
+</head>
+
+<body>
+  <header>
+    <div class="container-fluid">
+      <h2>Tom Waits Unofficial Fansite</h2><br>
+    </div>
+  </header>
   <nav class="navbar navbar-expand-md bg-dark navbar-dark">
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -41,78 +41,70 @@
       </ul>
     </div>
   </nav>
-   <!-- put in a container -->
-  <container>
-  <div class="row">
-    <div class="form-group col-md-7">
-      <div class="subscribe">
-
-      <h2>Subscribe For Tom Updates</h2><br>
-      <p>To get the latest news and to hear about releases and show, then just
-        <strong>sign up!</strong> After all, once you have read some of these facts about Tom, then how could you not
-        be
-        interested?</p>
-    </div>
-  </div>
-</div>
-</container>
 
   <!-- form inputs -->
-  <form>
-    <div class="row">
-      <div class="form-group col-sm-7">
-        <label for="fname">Your first name</label>
-        <input type="text" name="fname" class="form-control" id="fname" placeholder="Enter your first name" required>
+
+
+
+  <div class="container">
+    <h1>Subscribe to Tom's Updates</h1>
+    <p>"Tom Waits is a polarizing artist. To some people, he’s one of the greatest songwriters of the last half century.
+      A true poet and storyteller of the rock and roll era. An ageless artist who has endured without diminishing for
+      four decades. One of modern music’s most unique, most thunderous characters.
+      Or he’s a pretentious, overrated phony with a fedora and soul patch who imitates bad jazz music for white people
+      who don’t actually like jazz music.
+      Although I know a lot of fellow Tom Waits fans, I know even more who “want” to like Tom Waits. He’s not a guy with
+      traditional hits, so knowing where to dive in can be a challenge. Hopefully this will give you enough of a
+      framework to get started."
+    </p><br>
+    <form>
+      <div class="form-group has-success">
+        <label for="fname">First Name</label>
+        <input type="fname" class="form-control" id="fname" placeholder="Your First Name" required>
       </div>
-      <div class="form-group col-sm-7">
-        <label for="lname">Your last name</label>
-        <input type="text" name="lname" class="form-control" id="lname" placeholder="Enter your last name" required>
+      <div class="form-group has-success">
+        <label for="lname">Last Name</label>
+        <input type="lname" class="form-control" id="lname" placeholder="Your Last Name" required>
       </div>
-      <div class="form-group col-sm-7">
-        <label for="email">Your email</label>
-        <input type="email" name="email" class="form-control" id="email" placeholder=" Enter your email" required>
+      <div class="form-group has-warning">
+        <label for="email">Email</label>
+        <input type="email" class="form-control" id="email" placeholder="Your Email Address" required>
       </div>
-      <div class="form-group col-sm-7">
-        <label for="fave">Your favourite Tom song?</label>
-        <select id="fave" name="fave" class="form-control">
-          <option selected>Choose from...</option>
-          <option>16 Shells From A Thirty'Ought-6</option>
+
+      <div class="form-group">
+        <label for="Inputselect">Your favourite Tom song is?</label>
+        <select class="form-control">
+          <option>Please select your choice...</option>
           <option>Cold Cold Ground</option>
+          <option>Come On Up To The House</option>
           <option>Dirt In The Ground</option>
-          <option>Get Behind The Mule</option>
-          <option>Hang On St Christopher</option>
-          <option>Hold On</option>
+          <option>Heartattack and Vine</option>
           <option>House Where Nobody Lives</option>
           <option>In The Neighbourhood</option>
+          <option>Johnsburg, Illinois</option>
+          <option>Rain Dogs</option>
           <option>Step Right Up</option>
-          <option>Temptation</option>
-          <option>The Piano Has Been Drinking</option>
-          <option>Tom Traubert's Blues</option>
-          <option>Union Square</option>
+          <option>Tom Traubert’s Blues (Four Sheets to the Wind in Copenhagen)</option>
         </select>
       </div>
-      <div class="form-group col-sm-7">
-        <label for="movie">Your favourite Tom movie?</label>
-        <select id="movie" name="movie" class="form-control">
-          <option selected>Choose from...</option>
-          <option>Big Time</option>
-          <option>Bram Stoker's Dracula</option>
-          <option>Cold Feet</option>
+      <div class="form-group">
+        <label for="Inputselect">Your favourite Tom film is?</label>
+        <select class="form-control">
+          <option>Please select your choice...</option>
           <option>Coffee and Cigarettes</option>
           <option>Down By Law</option>
+          <option>Dracula</option>
           <option>Ironweed</option>
           <option>Mystery Men</option>
+          <option>One From The Heart</option>
           <option>Seven Psychopaths</option>
-          <option>The Ballad of Buster Scruggs</option>
-          <option>The Cotton Club</option>
+          <option>Shortcuts</option>
+          <option>Wristcutters: A Love Story</option>
         </select>
       </div>
-    </div>
-    <div class="button">
-    <button onClick="window.location.href=window.location.href">Subscribe</button>
   </div>
+  <button onClick="window.location.href=window.location.href">Subscribe</button>
   </form>
-
   <!-- Social/links -->
   <footer>
     <ul class="social-networks">
